hphp/hack/test/typecheck/ppl/static_call_by_classname.php
<?hh // strict

<<__PPL>>
class MyClass {
  public static function staticMeth(): void {
  }
}

<<__PPL>>
class PPLClass {
  public function staticCall(): void {
    MyClass::staticMeth();
  }
}
